--- a/stephan.css
+++ b/stephan.css
@@ -1,6 +1,7 @@
 body {
     background-image: url("https://images.pexels.com/photos/998641/pexels-photo-998641.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
     color: white;
+    scroll-behavior: smooth;
 }
 
 #S {
